lab1/Test/L1-A-12-23.output
Error Type A at Line 10
Error Type A at Line 15
Error Type B at Line 16
Error Type A at Line 27
Error Type A at Line 29
Error Type B at Line 29
Error Type B at Line 37
