lab1/Test/L1-A-12-23.cmm
struct nEm Ldi ( int Z9tov2pc8DSoS ) {
  if ( mQqpfNZzpQw12kd ) {
    float H2QLaR7xeuISOg59FnkJ [ 563936852 ] ;
  }else   return BNWKAjbxxAznNtJq = KcyHG1 || pVKJOPYWeJG1HHEVl 
    && wLWZMqnFtfHseg + a * ! PAhYxbjNnfWQIRNEOYC [ fvIxS 
    != oRoObYGlYCNY - J8azPjyNFq7JWY7im / ( X4vGHwsgkk0NC7T 
    <= LWkXEIedpWL ( rUBXtc == FvLIbFP72V ( URZUFXKL_C7yjj 
    , zZizNAivPiYMB < YtHis9wFOhTd1vTPa / cUMD9DopQYnCWPQ 
    ) . qnXclpRw4TKhPM . Cp1OuU9aMSCVv * ! 638311512.531764232 
    '> ! 1704869319 ) ) ] . J2hMQU >= - mB4 ( ) ;

}
struct {
  struct vejef7oqkw {
    struct G4Yp2vP yxTW #;
  }, typnkr = LdSe2 ;
}R5yCIcpsk6 
;
int ;
int h6hznY7wiCwT0 , w6HH5 

;
int ;
int o3eemB2nVXYmeG ( int oOiF , int AtaLPgLNk6QSxWCc_yT 
  ) {
  if ( xJiD56t3 )   ju1NjAe81kJ ;
$else   if ( HWZftAjfzMwwV4 )   ZwsYUPVHJQJZGBGriYV 
    ;
else   if ( LBbt3PQq2S_wFW ')   while tveNAjSyAKuDHabLZ 
    )   k2VC ;




}
int PNqaebPCPMi ( ) {
  if SURk5nrBp )   D ;

}
int ;
int ;
int ;
int ;
